# AGBClientData

./: .gitignore  Cargo.toml  Dockerfile  Free_Proxy_List.json  LinkedIn Parsing might need this.txt  README.md  docker-compose.yml  info.md  marketing-crawler.service
.github/workflows/: deploy.yml
src/: api.rs  bounce_monitor.rs  campaign.rs  crawler.rs  db.rs  discovery.rs  exporter.rs  investor_matching.rs  main.rs  models.rs  parser.rs  people.rs  proxy.rs  score.rs  tests.rs  validator.rs
static/: app.js  index.html  styles.css
static/js/: api.js  config.js  routes.js  utils.js
static/js/components/: pagination.js
static/js/modules/: crawler.js  dashboard.js  investors.js  logs.js  outreach.js  people.js  pipeline.js  proxies.js
