[package]
name = "marketing-data-crawler"
version = "1.0.0"
edition = "2021"
authors = ["AGB Technologies Pair Programming Team"]
description = "Anti-blocking Rust Server & Marketing Data Intelligence SPA"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.38", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
scraper = "0.19"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
rand = "0.8"
rust_xlsxwriter = "0.72"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
futures = "0.3"
trust-dns-resolver = "0.23"
urlencoding = "2.1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
